--- a/medium.html
+++ b/medium.html
@@ -9,17 +9,37 @@
 </head>
 <body>
     <div class="layout">
-        <div class="head">
-
+        <div class="header">
+            <h3 style="padding-left:20px;"> Acme Inc.</h3>
+            <div class="header-links" style="margin-left:990px;">
+                <p><a href="google.com">Home</a></p>
+                <p><a href="google.com">About</a></p>
+                <p><a href="google.com">Blog</a></p>
+                <p><a href="google.com">Contact</a></p>
+            </div>
+           
         </div>
         <div class="main">
+            <h4> Article Title</h4>
 
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error mollitia accusamus consequatur necessitatibus reiciendis cum possimus quasi in veritatis asperiores, 
+            qui facere aperiam earum hic vel, ex, pariatur neque voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore aperiam quibusdam, mollitia quam numquam dicta reiciendis ipsum quae, 
+            sequi rem rerum consequatur natus quis quos perferendis, iste voluptatum porro!</p>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error mollitia accusamus consequatur necessitatibus reiciendis cum possimus quasi in veritatis asperiores, 
+                qui facere aperiam earum hic vel, ex, pariatur neque voluptates? Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi dolore aperiam quibusdam, mollitia quam numquam dicta reiciendis ipsum quae, 
+                sequi rem rerum consequatur natus quis quos perferendis, iste voluptatum porro!</p> 
         </div>
         <div class="side">
-
+              <h5>Extra Links</h5>
+              <ul>
+                <li><a href="google.com">Official Docs</a></li>
+                <li><a href="google.com">Privacy Policy</a></li>
+                <li><a href="google.com">Terms of Service</a></li>
+              </ul>
         </div>
         <div class="foot">
-
+               <p>&#169; Acme Inc. All Rights Reserved.</p>
         </div>
     </div>
     
